--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ spring.datasource.username=victor
 spring.datasource.password=123456789
  
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=create 
+spring.jpa.hibernate.ddl-auto=update 
 spring.jpa.show-sql=true 
 spring.jpa.properties.hibernate.format_sql=true 
  
